@@ -1,5 +1,8 @@
 Revision history for Perl extension Coro.
 
+	- uh... I found the prompt function in ExtUtils::MakeMaker.
+          Highly correct stuff, that is...
+
 0.652 Thu May  8 02:54:46 CEST 2003
 	- Applied patch by Slaven Rezic to set default to "s" on FreeBSD,
           cause version 4 doesn't have ucontext.
